# zero_to_prod_rust

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.cargo/: config.toml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
